--- a/kivy_ui/main_window.kv
+++ b/kivy_ui/main_window.kv
@@ -1,98 +1,60 @@
-<MainWindow>:
+# main_window.kv
+
+BoxLayout:
+    orientation: 'vertical'
+
+    # 顶部按钮区域
+    BoxLayout:
+        orientation: 'horizontal'
+        spacing: 10
+        padding: 10
+
+        Button:
+            id: source_button
+            text: '选择图片文件'
+        Button:
+            id: target_button
+            text: '选择保存文件夹'
+        Button:
+            id: rename_button
+            text: '重命名文件'
+        Button:
+            id: convert_button
+            text: '转换格式'
+        Button:
+            id: compress_button
+            text: '压缩图片'
+
+    # 输入区域
     BoxLayout:
         orientation: 'vertical'
         spacing: 10
         padding: 10
 
-        # 文件选择区域
-        BoxLayout:
-            orientation: 'horizontal'
-            spacing: 10
-            size_hint_y: None
-            height: 40
+        TextInput:
+            id: prefix_input
+            hint_text: '请输入文件名前缀'
+        TextInput:
+            id: start_number_input
+            hint_text: '请输入起始编号'
+            input_filter: 'int'
+        TextInput:
+            id: format_input
+            hint_text: '请输入目标格式'
+        TextInput:
+            id: quality_input
+            hint_text: '请输入压缩质量'
+            input_filter: 'int'
 
-            Label:
-                text: '选择图片文件夹/文件:'
-            Button:
-                id: source_button
-                text: '选择'
-                on_press: root.select_source()
+    # 状态显示区域
+    BoxLayout:
+        orientation: 'vertical'
+        spacing: 10
+        padding: 10
 
-        # 保存文件夹选择区域
-        BoxLayout:
-            orientation: 'horizontal'
-            spacing: 10
-            size_hint_y: None
-            height: 40
-
-            Label:
-                text: '选择保存图片文件夹:'
-            Button:
-                id: target_button
-                text: '选择文件夹'
-                on_press: root.select_target_directory()
-
-        # 重命名区域
-        BoxLayout:
-            orientation: 'horizontal'
-            spacing: 10
-
-            Label:
-                text: '前缀:'
-            TextInput:
-                id: prefix_input
-                size_hint_x: None
-                width: 200
-
-            Label:
-                text: '起始编号:'
-            TextInput:
-                id: start_number_input
-                size_hint_x: None
-                width: 100
-
-        Button:
-            id: rename_button
-            text: '执行重命名'
-            on_press: root.rename_files()
-
-        # 转换区域
-        BoxLayout:
-            orientation: 'horizontal'
-            spacing: 10
-
-            Label:
-                text: '目标格式:'
-            TextInput:
-                id: format_input
-                size_hint_x: None
-                width: 100
-
-        Button:
-            id: convert_button
-            text: '执行转换'
-            on_press: root.convert_files()
-
-        # 压缩区域
-        BoxLayout:
-            orientation: 'horizontal'
-            spacing: 10
-
-            Label:
-                text: '压缩质量 (1-100):'
-            TextInput:
-                id: quality_input
-                size_hint_x: None
-                width: 100
-
-        Button:
-            id: compress_button
-            text: '执行压缩'
-            on_press: root.compress_files()
-
-        # 进度条
-        ProgressBar:
-            id: progress_bar
         Label:
             id: status_label
-            text: ''
+            text: '状态信息'
+        ProgressBar:
+            id: progress_bar
+            max: 100
